--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <h1>Learn <span class="ts-text"> TypeScript </span></h1>
     <p class="desc-text">open console to see the output :)</p>
-    <script type="module" src="/src/main.ts"></script>
+    <!-- <script type="module" src="/src/TypeAnnotations.ts"></script> -->
+    <script type="module" src="/src/InterfacesAndTypes.ts"></script>
   </body>
 </html>
