--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Learn <span class="ts-text"> TypeScript </span></h1>
     <p class="desc-text">open console to see the output :)</p>
     <!-- <script type="module" src="/src/TypeAnnotations.ts"></script> -->
-    <script type="module" src="/src/InterfacesAndTypes.ts"></script>
+    <!-- <script type="module" src="/src/InterfacesAndTypes.ts"></script> -->
+    <script type="module" src="/src/UnionsAndIntersections.ts"></script>
   </body>
 </html>
