--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p class="desc-text">open console to see the output :)</p>
     <!-- <script type="module" src="/src/TypeAnnotations.ts"></script> -->
     <!-- <script type="module" src="/src/InterfacesAndTypes.ts"></script> -->
-    <script type="module" src="/src/UnionsAndIntersections.ts"></script>
+    <!-- <script type="module" src="/src/UnionsAndIntersections.ts"></script> -->
+    <script type="module" src="/src/Enums.ts"></script>
   </body>
 </html>
